# cat-sql-rust-thing

./: Cargo.toml  docker-compose.yml
migrations/: 20220120053106_Add_cat_schema.down.sql  20220120053106_Add_cat_schema.up.sql  20220126053837_create_table_humans.down.sql  20220126053837_create_table_humans.up.sql
src/: main.rs
src/schema/: cat.rs  human.rs  mod.rs
src/service/: cat.rs  human.rs
