[package]
name = "cathouse-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
thiserror = "1.0.30"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = [ "json" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.sqlx]
version = "0.5"
features = [ "runtime-tokio-native-tls", "postgres", "migrate" ]
